File Name: CHANGES

03/23/2021 FASP 2.6.6:
- Update CMake and add backup target;
- Saving coarse matrices for debugging;

03/13/2021 FASP 2.6.5:
- Fix DEBUG information in SmatInv;
- Fix Windows VS19 OpenMP flag;
- Test OpenMP for icc;
- Rewrite cmake: Replace FASP_SOURCE_DIR with general dir.

03/05/2021 FASP 2.6.4:
- Remove testlib from VS19;
- Add DLL version for Windows;
- Fix DLL version for vscode/cmake/msvc;
- Fix OpenMP version for cmake.

02/13/2021 FASP 2.6.3:
- Remove BLAS from CMake;
- Make CMake work on Windows + VSCode + CMake;
- Fix MSVC flag: _CRT_SECURE_NO_WARNINGS.

02/10/2021 FASP 2.6.2:
- Update output information for UA AMG setup;
- Add decoup_type for choosing decoupling methods in BSR;
- Update test problems in main/test.c;
- Update CMake external packages.

02/05/2021 FASP 2.6.1:
- Add uninstall target to the new CMakeFile.txt;
- Now both old and new cmake work!
- Change output of fasp_solver_amg();
- Update header file;
- Update return values for AMG solvers;
- Add Release/Debug targets into cmake.

01/25/2021 FASP 2.6.0:
- Switch cmake style.
- Use the same compile and link style as fasp4blkoil.
- Check compatibility with PennSim new version!
- Update benchmark test input format.
- Double-check PARDISO interface.

01/15/2021 FASP 2.5.9:
- Fix divide-by-zero in GCG for NAMLI.
- Fix some typos in comments.

01/10/2021 FASP 2.5.8:
- Add benchmark test based on SuiteSparse Matrix Market.
- Modify test/main/test.c slightly.
- Update error messages for reading files.
- Rewrite fasp_dbsr_print.
- Make a separate dir for benchmark test.
- Fix problems with icc compiler for Linux.

12/15/2020 FASP 2.5.7:
- Check trivial solution case Ax=0 for AMG cycles.
- Update cmake required version.
- Update cmake CC search list.
- Do not check for Doxygen by default.
- Add VW and WV hybrid cycles.

11/04/2020 FASP 2.5.6:
- Fix new warnings in GCC10.
- Fix unsigned long problem for INT.
- Fix debug mode.
- Update version information.

10/13/2020 FASP 2.5.5: